# yew-video-streaming

./: Cargo.toml  index.html  style.scss
src/: main.rs
