[package]
name = "yew-video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console", "EncodedVideoChunk", "HtmlVideoElement", "MediaDevices", "MediaStream", "MediaStreamConstraints", "MediaStreamTrack", "MediaStreamTrackProcessor", "MediaStreamTrackProcessorInit", "Navigator", "ReadableStream", "ReadableStreamGetReaderOptions", "ReadableStreamDefaultReader", "VideoEncoder", "VideoEncoderConfig", "VideoEncoderInit", "VideoFrame", "VideoTrack"] }
yew = "0.19.3"
